--- a/mybatis-plus/src/main/resources/application.yml
+++ b/mybatis-plus/src/main/resources/application.yml
@@ -9,3 +9,5 @@ mybatis-plus:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   global-config:
     banner: false
+#    db-config:
+#      id-type: assign_id
